# Assay

./: .env.example  .gitignore  README.md  README.zh.md  pyproject.toml  requirements.txt
docs/: README.md  design-minute-backtesting.md  tushare.md
docs/cn/: README.md  multi_market.md  tushare.md
docs/design/: architecture.md  engineering.md  operator-compatibility.md  portfolio-backtest.docx  portfolio-backtest.md  webui.md
docs/en/: multi_market.md  tushare.md
docs/guide/: cli.md  data-and-adjustment.md  data-and-adjustment.zh.md  data-pipeline.md  factor-combination.md  getting-started.md  mcp-server.md  performance.md  portfolio-backtest.md  precompute-cse.md  python-sdk.md  rest-api.md  webui.md
scripts/: bench_alpha101.py  download_tushare.py  prepare_cn.py  prepare_nasdaq100.py  run_tests.py
src/assay/: __init__.py  cli.py  config.py  config_store.py  service.py
tests/: conftest.py  test_combination_store.py
tests/api/: test_api.py  test_webui.py
tests/data/: test_adjust.py  test_calendar_sessions.py  test_cn_ingest.py  test_data_integrity.py  test_frequency.py  test_local_source.py  test_nasdaq100.py  test_smoke_network.py
tests/engine/: test_computation.py  test_cse_precompute.py  test_custom_operators.py  test_diagnostics.py  test_dialects.py  test_engine.py  test_operators_cs.py  test_operators_math.py  test_operators_ts.py  test_qlib_extensions.py
tests/evaluator/: test_combination.py  test_evaluator.py
tests/factors/: test_alpha101.py
tests/mcp/: test_mcp.py
tests/performance/: test_performance.py
tests/portfolio/: test_cn_limits.py  test_config_hash_stability.py  test_metrics.py  test_portfolio.py  test_rebalance.py
(+145 files in other folders)
